refactor: JDK17 -> JDK1.8
- build JDK 17 -> 1.8;
- remove duplicate License;
- deploy 0.0.2-SNAPSHOT;